--- a/WebApi/ClientApp/package.json
+++ b/WebApi/ClientApp/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "awesome-debounce-promise": "^2.1.0",
-    "bootstrap": "^3.3.7",
-    "react": "^16.0.0",
+    "bootstrap": "^3.4.1",
+    "react": "^16.8.5",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "react-bootstrap-table-next": "^3.0.3",
+    "react-dom": "^16.8.5",
+    "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "rimraf": "^2.6.2"
+    "redux-thunk": "^2.3.0",
+    "rimraf": "^2.6.3"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
